Overhaul rec.id / audio.name (big ugh, but it worked)

--- a/features/notebooks/180906_api_data_volume.ipynb
+++ b/features/notebooks/180906_api_data_volume.ipynb
@@ -1017,7 +1017,7 @@
     "    # Featurize\n",
     "    #   .pipe(recs_featurize_audio_feat_spectro)\n",
     "    # [INLINE]\n",
-    "    .assign(audio=lambda df: sg.load.audio(df, scheduler='threads'))\n",
+    "    .pipe(sg.load.audio, scheduler='threads')\n",
     "    .pipe(sg.projection.transform)  # .feat\n",
     "    .assign(spectro=lambda df: sg.features.spectro(df, scheduler='threads', cache=True))  # .spectro is input for thumb/micro\n",
     "\n",
