--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -844,6 +844,143 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "time": "1.264s"
+   },
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "audio = audiosegment.from_file('/tmp/out.wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio.export('/tmp/foo.save(junk)',\n",
+    "    # format='mp4', bitrate='32k', codec='libfdk_aac',\n",
+    "    # format='mp4', bitrate='32k', codec='aac',\n",
+    "    # format='mp3', bitrate='32k',\n",
+    "    format='wav',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q: Is ffmpeg happy reading files with junked extensions?\n",
+    "#   A: Yep! (Just don't use audiosegment.from_file!)\n",
+    "from util import *\n",
+    "for path in [\n",
+    "    '/tmp/out.wav',\n",
+    "    '/tmp/out.mp3',\n",
+    "    '/tmp/out.m4a',\n",
+    "]:\n",
+    "    audio = audio_from_file(path)\n",
+    "    display(\n",
+    "        audio,\n",
+    "        str(audio),\n",
+    "        np.frombuffer(audio._data, dtype=np.uint8)[:100],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio = audio_from_file(Path(data_dir) / 'xc/data/RCKI/157428/audio.mp3')\n",
+    "(audio.frame_rate, audio.channels, audio.sample_width * 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio = audio_from_file(Path(data_dir) / 'cache/audio/xc/data/RCKI/157428/audio.mp3.resample(22050,1,16).enc(wav)')\n",
+    "(audio.frame_rate, audio.channels, audio.sample_width * 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio = audio_from_file(Path(data_dir) / 'cache/audio/xc/data/RCKI/157428/audio.mp3.resample(22050,1,16).enc(wav).slice(0,5000).enc(mp3,64k)')\n",
+    "(audio.frame_rate, audio.channels, audio.sample_width * 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio = audio_from_file(Path(data_dir) / 'cache/audio/xc/data/RCKI/157428/audio.mp3.resample(22050,1,16).enc(wav).slice(0,5000).resample(22050,1,32).enc(mp4,libfdk_aac,64k)')\n",
+    "(audio.frame_rate, audio.channels, audio.sample_width * 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "audio = audio_from_file(\n",
+    "    Path(data_dir) / 'cache/audio/xc/data/RCKI/157428/audio.mp3.resample(22050,1,16).enc(wav).slice(0,5000).enc(mp3,64k)',\n",
+    "    # codec='pcm_s16le',  # XXX This doesn't work\n",
+    "    # parameters=['-acodec', 'pcm_s16le'],  # XXX This doesn't work\n",
+    "    # TODO TODO Next try: is there a param we should specify when writing the mp3/mp4?\n",
+    "    #   - If not, nuclear option is to run with a (1-line) patched version of pydub/audio_segment.py\n",
+    ")\n",
+    "(audio.frame_rate, audio.channels, audio.sample_width * 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "audio = audio_from_file(Path(data_dir) / 'xc/data/RCKI/157428/audio.mp3')\n",
+    "display((audio.frame_rate, audio.channels, audio.sample_width * 8))\n",
+    "audio = audio_from_file(Path(data_dir) / 'cache/audio/xc/data/RCKI/157428/audio.mp3.resample(22050,1,16).enc(wav).slice(0,5000).enc(mp3,64k)')\n",
+    "display((audio.frame_rate, audio.channels, audio.sample_width * 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%lprun -f df_summary\n",
+    "df_summary(DF([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
