api almost back online with fast caching...

--- a/features/notebooks/180906_api_data_volume.ipynb
+++ b/features/notebooks/180906_api_data_volume.ipynb
@@ -269,7 +269,7 @@
     "from humanize import naturalsize\n",
     "recs = (sg.xc_meta\n",
     "    .sample(n=1000, random_state=0)\n",
-    "    .pipe(recs_featurize_audio_meta)\n",
+    "    .pipe(recs_featurize_metadata)\n",
     "    .pipe(df_inspect, lambda df: (\n",
     "        '', 'n_recs',\n",
     "        '  sample: %s' % len(df),\n",
@@ -1015,14 +1015,16 @@
     "    )\n",
     "\n",
     "    # Featurize\n",
-    "    #   .pipe(recs_featurize_audio_feat_spectro)\n",
+    "    #   .pipe(recs_featurize_audio)\n",
+    "    #   .pipe(recs_featurize_feat)\n",
+    "    #   .pipe(recs_featurize_spectro)\n",
     "    # [INLINE]\n",
     "    .pipe(sg.load.audio, scheduler='threads')\n",
     "    .pipe(sg.projection.transform)  # .feat\n",
     "    .assign(spectro=lambda df: sg.features.spectro(df, scheduler='threads', cache=True))  # .spectro is input for thumb/micro\n",
     "\n",
     "    # Featurize\n",
-    "    #   .pipe(recs_featurize_thumb_micro,\n",
+    "    #   .pipe(recs_featurize_micro_thumb,\n",
     "    #       thumb_s=0,\n",
     "    #       audio_s=10,\n",
     "    #       scale=1,\n",
