--- a/features/notebooks/180907_audio_codecs_data_volume.ipynb
+++ b/features/notebooks/180907_audio_codecs_data_volume.ipynb
@@ -134,7 +134,7 @@
     "    # .sample(n=10, random_state=0)  # XXX Debug\n",
     "    # .sample(n=1000, random_state=0)\n",
     "    # [lambda df: df.species.isin(['PNLO', 'CARW'])]  # XXX Debug restricted/disabled xc recs\n",
-    "    .pipe(recs_featurize_audio_meta)\n",
+    "    .pipe(recs_featurize_metadata)\n",
     ")"
    ]
   },
