--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -832,8 +832,8 @@
     "    [lambda df: df.quality.isin(['A'])]\n",
     "    .sort_index(ascending=True)\n",
     "    [:30]\n",
-    "    .pipe(xc_meta_to_xc_raw_recs, load=sg.load)\n",
-    "    .pipe(xc_raw_recs_to_xc_recs, projection=sg.projection)\n",
+    "    .pipe(xc_meta_to_raw_recs, load=sg.load)\n",
+    "    .pipe(xc_raw_recs_to_recs, projection=sg.projection)\n",
     "    .pipe(df_assign_first,\n",
     "        micro=df_cell_spectros(plot_spectro_micro.many, sg.features, wrap_s=5, scale=dict(h=16)),\n",
     "    )\n",
@@ -989,9 +989,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
