--- a/features/notebooks/180831_app_ideas_7_recs_xc_species.ipynb
+++ b/features/notebooks/180831_app_ideas_7_recs_xc_species.ipynb
@@ -377,15 +377,15 @@
     }
    ],
    "source": [
-    "from datasets import xc_meta_to_xc_raw_recs, xc_raw_recs_to_xc_recs\n",
+    "from datasets import xc_meta_to_raw_recs, xc_raw_recs_to_recs\n",
     "(sg.xc_meta\n",
     "    [lambda df: df.species == species]\n",
     "    [lambda df: df.quality.isin(['A', 'B'])]\n",
     "    .sort_index(ascending=True)\n",
     "    [:3]\n",
     "    # TODO Can we make this more lightweight?\n",
-    "    .pipe(xc_meta_to_xc_raw_recs, load=sg.load)\n",
-    "    .pipe(xc_raw_recs_to_xc_recs, projection=sg.projection)\n",
+    "    .pipe(xc_meta_to_raw_recs, load=sg.load)\n",
+    "    .pipe(xc_raw_recs_to_recs, projection=sg.projection)\n",
     "    # What we want\n",
     "    .pipe(df_assign_first,\n",
     "        micro=df_cell_spectros(plot_spectro_micro.many, sg.features, wrap_s=10, scale=dict(h=26)),\n",
@@ -762,9 +762,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
