--- a/features/notebooks/180901_recs_mgwa_female.ipynb
+++ b/features/notebooks/180901_recs_mgwa_female.ipynb
@@ -39,15 +39,15 @@
    },
    "outputs": [],
    "source": [
-    "from datasets import xc_meta_to_xc_raw_recs, xc_raw_recs_to_xc_recs\n",
+    "from datasets import xc_meta_to_raw_recs, xc_raw_recs_to_recs\n",
     "mgwa = (sg.xc_meta\n",
     "    [lambda df: df.species == species]\n",
     "    # [lambda df: df.quality.isin(['A', 'B'])]\n",
     "    .sort_index(ascending=True)\n",
     "    # .pipe(df_inspect, lambda df: (df.shape, df[:10]))\n",
     "    # [:3]\n",
-    "    .pipe(xc_meta_to_xc_raw_recs, load=sg.load)\n",
-    "    .pipe(xc_raw_recs_to_xc_recs, projection=sg.projection)\n",
+    "    .pipe(xc_meta_to_raw_recs, load=sg.load)\n",
+    "    .pipe(xc_raw_recs_to_recs, projection=sg.projection)\n",
     "    .pipe(df_inspect, lambda df: (df.shape, df[:3]))\n",
     ")"
    ]
@@ -197,9 +197,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
