Fix load + fix /species + workaround 10.09s bug

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -835,7 +835,7 @@
     "    .pipe(xc_meta_to_raw_recs, load=sg.load)\n",
     "    .pipe(xc_raw_recs_to_recs, projection=sg.projection)\n",
     "    .pipe(df_assign_first,\n",
-    "        micro=df_cell_spectros(plot_spectro_micro.many, sg.features, wrap_s=5, scale=dict(h=16)),\n",
+    "        micro=df_cell_spectros(plot_micro.many, sg.features, wrap_s=5, scale=dict(h=16)),\n",
     "    )\n",
     "    [['micro', 'species', 'species_com_name']]\n",
     ")"
@@ -977,6 +977,31 @@
     "%%lprun -f df_summary\n",
     "# How to %lprun for easy line profiling\n",
     "df_summary(DF([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mp4/mp3 don't precisely preserve audio duration\n",
+    "#   - Just a fact of life...\n",
+    "#   - We can always precisely slice the pcm samples once they're decoded from mp4/mp3, but as long as we're dealing in\n",
+    "#     non-pcm encodings (for compression) we're stuck dealing with imprecise audio durations\n",
+    "from notebooks import *\n",
+    "sg.init(app=None)\n",
+    "id = 'xc/data/PSFL/408490/audio.mp3'\n",
+    "audio = audio_from_file_in_data_dir(id)\n",
+    "rec = S(dict(id=id, audio=box(audio), duration_s=0, dataset='xc'))\n",
+    "audio10 = sg.features.slice_audio(rec, 0, 10).audio.unbox\n",
+    "ipy_print(\n",
+    "    len(audio),\n",
+    "    len(audio10),\n",
+    ")\n",
+    "audio10.export('/tmp/audio10.wav', format='wav', codec=None,         bitrate=None,  ).close()  # ffprobe -> 10s\n",
+    "audio10.export('/tmp/audio10.mp3', format='mp3', codec=None,         bitrate='32k', ).close()  # ffprobe -> 10.03s [FIXME]\n",
+    "audio10.export('/tmp/audio10.mp4', format='mp4', codec='libfdk_aac', bitrate='32k', ).close()  # ffprobe -> 10.04s [FIXME]"
    ]
   },
   {
