notebooks/api_undo_sampling_hack: Faster (~10x) + smaller (~9x)

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1009,14 +1009,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pstats\n",
+    "stats = pstats.Stats('/tmp/prof-2-d_p2')\n",
+    "# stats.sort_stats('tottime').print_stats(20)\n",
+    "stats.sort_stats('cumtime').print_stats(50)\n",
+    "# stats.sort_stats('cumtime').print_stats('model', 20)\n",
+    "# stats.sort_stats('cumtime').print_callees(r'\\bplot_thumb\\b', 20)\n",
+    "None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
