Checkpoint: Fighting with .sqlite/.parquet + np.array cols...

--- a/features/notebooks/180524_eval_birdclef.ipynb
+++ b/features/notebooks/180524_eval_birdclef.ipynb
@@ -576,7 +576,7 @@
    "outputs": [],
    "source": [
     "(search.coverage_error(recs_test, by='species')\n",
-    "    .pipe(lambda df: df_transform_cat(df, lambda _: df.sort_values('coverage_error').species, 'species'))\n",
+    "    .pipe(lambda df: df_transform_cats(df, ['species'], f=lambda _: df.sort_values('coverage_error').species))\n",
     "    .pipe(ggplot, aes(x='species', y='coverage_error'))\n",
     "    + geom_point()\n",
     "    + coord_flip()\n",
