--- a/features/notebooks/180906_api_data_volume.ipynb
+++ b/features/notebooks/180906_api_data_volume.ipynb
@@ -997,15 +997,6 @@
    "source": [
     "# TODO TODO How big is the payload?\n",
     "\n",
-    "def np_to_npy_bytes(x: np.ndarray) -> bytes:\n",
-    "    # From https://stackoverflow.com/a/18622264/397334\n",
-    "    #   - np.save docs: https://docs.scipy.org/doc/numpy/reference/generated/numpy.save.html\n",
-    "    #   - .npy isn't slow or big: https://stackoverflow.com/a/41425878/397334\n",
-    "    out = io.BytesIO()\n",
-    "    np.save(out, x)\n",
-    "    out.seek(0)\n",
-    "    return out.read()\n",
-    "\n",
     "df = (recs\n",
     "\n",
     "    .sample(random_state=0,\n",
@@ -1069,7 +1060,7 @@
     "        background_species=','.join,  # List[str] -> str\n",
     "        micro=lambda x: ipy_formats_to_html(x),  # df_cell_display(...) -> html str\n",
     "        audio=lambda x: pickle.dumps(x.unbox),  # Box(AudioSegment) -> pkl bytes\n",
-    "        feat=np_to_npy_bytes,  # np.ndarray -> npy bytes\n",
+    "        feat=np_save_to_bytes,  # np.ndarray -> npy bytes\n",
     "    )\n",
     "\n",
     "    # Cosmetics\n",
