--- a/features/notebooks/180524_fit_search.ipynb
+++ b/features/notebooks/180524_fit_search.ipynb
@@ -353,7 +353,7 @@
    ],
    "source": [
     "(search.coverage_error_by(recs_test, 'species')\n",
-    "    .pipe(lambda df: df_transform_cat(df, lambda _: df.sort_values('coverage_error').species, 'species'))\n",
+    "    .pipe(lambda df: df_transform_cats(df, ['species'], f=lambda _: df.sort_values('coverage_error').species))\n",
     "    .pipe(ggplot, aes(x='species', y='coverage_error'))\n",
     "    + geom_point()\n",
     "    + coord_flip()\n",
