Finally solve .sqlite/.parquet with df_cache_hybrid (big ugh)

--- a/features/notebooks/180926_api_search_recs_pkl_parquet_sqlite.ipynb
+++ b/features/notebooks/180926_api_search_recs_pkl_parquet_sqlite.ipynb
@@ -153,7 +153,7 @@
     "    - Read time: .sqlite ~2x slower than .parquet\n",
     "    - Write time: .sqlite ~10x slower than .parquet, but not a relevant bottleneck, and dominated by etl compute anyway\n",
     "- FIXME Crap, I forgot to account for the ~20s it takes to convert back _to_ search_recs from the serdes df\n",
-    "    - ...\n",
+    "    - Solution -> notebooks/api_dev_search_recs_hybrid\n",
     "\n",
     "Perf (from final cell)\n",
     "```\n",
@@ -393,6 +393,7 @@
     }
    ],
    "source": [
+    "get_search_recs.cache_clear()\n",
     "search_recs = get_search_recs(cache_type=None)"
    ]
   },
@@ -974,9 +975,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
