--- a/features/notebooks/180927_api_dev_search_recs_parquet.ipynb
+++ b/features/notebooks/180927_api_dev_search_recs_parquet.ipynb
@@ -16,6 +16,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "4.626s"
+   },
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "sg.init(None, skip=[sg_load.load_search_recs])\n",
+    "get_search_recs.cache_clear()\n",
+    "kwargss = [\n",
+    "    dict(refresh=True),  # Cache miss\n",
+    "    dict(),  # Cache hit\n",
+    "]\n",
+    "search_recss = []\n",
+    "for kwargs in kwargss:\n",
+    "    print()\n",
+    "    print(f'search_recs(**{kwargs})')\n",
+    "    search_recs = get_search_recs(**kwargs, cache_type='parquet')\n",
+    "    search_recss.append(search_recs)\n",
+    "    display(search_recs\n",
+    "        [['xc_id', 'feat', 'f_f', 'f_p', 'background', 'background_species']]\n",
+    "        [2:3].reset_index(drop=True).T\n",
+    "        .pipe(df_assign_first,\n",
+    "            size=lambda df: df.T.memory_usage(deep=True),\n",
+    "            type=lambda df: df[0].map(lambda x: type(x).__name__),\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "7.659s"
+   },
+   "outputs": [],
+   "source": [
+    "# TODO Write tests\n",
+    "#   - Should roundtrip, should preserve category dtypes, should fail if index present\n",
+    "[a, b] = search_recss\n",
+    "pd.testing.assert_frame_equal(a, b, check_index_type=True, check_column_type=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "array_cols = ['feat', 'f_f', 'f_p']\n",
+    "feat_cols = ['feat', 'f_f', 'f_p']\n",
     "wide = (df\n",
     "    # [:3]\n",
     "    .pipe(lambda df: (\n",
@@ -193,7 +238,7 @@
     "            df.drop(columns=['feat', 'f_f', 'f_p']),\n",
     "            *[\n",
     "                DF(np.array(list(df[c]))).rename(columns=lambda i: f'{c}.{i}')\n",
-    "                for c in array_cols\n",
+    "                for c in feat_cols\n",
     "            ],\n",
     "        ])\n",
     "    ))\n",
@@ -232,9 +277,9 @@
    "source": [
     "(out\n",
     "    .pipe(df_inspect, lambda df: (df.shape,))\n",
-    "    .assign(**{k: list(out.filter(regex=f'^{k}\\.').values) for k in array_cols})\n",
+    "    .assign(**{k: list(out.filter(regex=f'^{k}\\.').values) for k in feat_cols})\n",
     "    .pipe(df_inspect, lambda df: (df.shape,))\n",
-    "    [lambda df: [c for c in df if not any(c.startswith(f'{k}.') for k in array_cols)]]\n",
+    "    [lambda df: [c for c in df if not any(c.startswith(f'{k}.') for k in feat_cols)]]\n",
     "    .pipe(df_inspect, lambda df: (df.shape,))\n",
     "    # .memory_usage(deep=True).sort_index()\n",
     "    [:1].T\n",
@@ -339,62 +384,241 @@
     "(df\n",
     "    # [:10]\n",
     "    .pipe(lambda df: (\n",
-    "        [df[[k]].to_parquet(f'/tmp/df-{k}.parquet') for k in tqdm(df.columns) if k not in array_cols],\n",
-    "        [np.save(f'/tmp/df-{k}.npy', np.array(list(df[k]))) for k in tqdm(df.columns) if k in array_cols],\n",
+    "        [df[[k]].to_parquet(f'/tmp/df-{k}.parquet') for k in tqdm(df.columns) if k not in feat_cols],\n",
+    "        [np.save(f'/tmp/df-{k}.npy', np.array(list(df[k]))) for k in tqdm(df.columns) if k in feat_cols],\n",
     "    ))\n",
     ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = ensure_dir('/tmp/save-1')\n",
+    "feat_cols = ['feat', 'f_f', 'f_p']\n",
+    "measure = lambda desc, f: timed_print(f, print=lambda x: print(f'{x} {desc}'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XXX ^"
+    "# TODO TODO Save/load separate files: non_feats.parquet + feats.npy\n",
+    "- Finally a promising approach\n",
+    "- A little more complexity to manage, but not much\n",
+    "- Great! 1.1s load, 3.0 save\n",
+    "- Solution -> notebooks/api_dev_search_recs_hybrid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "4.626s"
+    "time": "4.837s"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "35231"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.764] non_feats"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:01.686] feat"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.638] f_f"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.331] f_p"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:03.426] save"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    }
+   ],
    "source": [
-    "from notebooks import *\n",
-    "sg.init(None, skip=[sg_load.load_search_recs])\n",
-    "get_search_recs.cache_clear()\n",
-    "kwargss = [\n",
-    "    dict(refresh=True),  # Cache miss\n",
-    "    dict(),  # Cache hit\n",
-    "]\n",
-    "search_recss = []\n",
-    "for kwargs in kwargss:\n",
-    "    print()\n",
-    "    print(f'search_recs(**{kwargs})')\n",
-    "    search_recs = get_search_recs(**kwargs, cache_type='parquet')\n",
-    "    search_recss.append(search_recs)\n",
-    "    display(search_recs\n",
-    "        [['xc_id', 'feat', 'f_f', 'f_p', 'background', 'background_species']]\n",
-    "        [2:3].reset_index(drop=True).T\n",
-    "        .pipe(df_assign_first,\n",
-    "            size=lambda df: df.T.memory_usage(deep=True),\n",
-    "            type=lambda df: df[0].map(lambda x: type(x).__name__),\n",
-    "        )\n",
-    "    )"
+    "def save(df):\n",
+    "    print(len(df))\n",
+    "    df_require_index_is_trivial(df)\n",
+    "    measure('non_feats', lambda: (df\n",
+    "        [[k for k in df if k not in feat_cols]]\n",
+    "        .to_parquet(f'{path}/non_feats.parquet', engine='fastparquet', compression='uncompressed')\n",
+    "    ))\n",
+    "    [measure(k, lambda: np.save(f'{path}/feat-{k}.npy', np.array(list(df[k])))) for k in df.columns if k in feat_cols]\n",
+    "    return df\n",
+    "saved = measure('save', lambda: save(search_recs\n",
+    "    # [:10]\n",
+    "))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "7.659s"
+    "time": "2.926s"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.393] non_feats"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.252] feat"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.159] f_f"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.121] f_p"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:00.360] out"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[00:01.387] total"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    },
+    {
+     "data": {
+      "text/plain": "(35231, 58)"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    },
+    {
+     "data": {
+      "text/plain": "(35231, 58)"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    }
+   ],
+   "source": [
+    "def load():\n",
+    "    non_feats = measure('non_feats', lambda: (\n",
+    "        pd.read_parquet(f'{path}/non_feats.parquet', engine='fastparquet')\n",
+    "    ))\n",
+    "    feats = {k: measure(k, lambda: np.load(f'{path}/feat-{k}.npy')) for k in feat_cols}\n",
+    "    df = measure('out', lambda: non_feats.assign(**{k: list(x) for k, x in feats.items()}))\n",
+    "    assert (df.index == pd.RangeIndex(len(df))).all()\n",
+    "    df = df.reset_index(drop=True)  # Drop Int64Index, restore trivial RangeIndex\n",
+    "    return df\n",
+    "loaded = measure('total', load)\n",
+    "display(\n",
+    "    saved.shape,\n",
+    "    loaded.shape,\n",
+    "    # loaded[:1].T,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "8.783s"
    },
    "outputs": [],
    "source": [
-    "# TODO Write tests\n",
-    "#   - Should roundtrip, should preserve category dtypes, should fail if index present\n",
-    "[a, b] = search_recss\n",
-    "pd.testing.assert_frame_equal(a, b, check_index_type=True, check_column_type=True)"
+    "pd.testing.assert_frame_equal(\n",
+    "    (saved\n",
+    "        .pipe(df_reorder_cols, last=feat_cols)\n",
+    "    ),\n",
+    "    (loaded\n",
+    "        # TODO TODO Manually save df.columns to restore col order\n",
+    "        # TODO TODO Manually save df.dtypes to restore categories (and dtypes generally)\n",
+    "        #   - Then we win! (fingers crossed...)\n",
+    "        .pipe(df_reorder_cols, last=feat_cols)\n",
+    "        .pipe(df_transform_cats, ordered=True, col_names=[k for k in loaded if loaded[k].dtype.name == 'category'])\n",
+    "    ),\n",
+    "    check_index_type=True,\n",
+    "    check_column_type=True,\n",
+    ")"
    ]
   },
   {
