/species clustering: fixes, tweaks, add labels

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1024,6 +1024,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "xc.metadata.recordist.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('\\n'.join(\n",
+    "    'td .label-i.i-%-2s { color: white; background: %s; }' % (i, mpl.colors.rgb2hex(x))\n",
+    "    for i, x in enumerate(take(50, cycle(chain(\n",
+    "        islice(mpl.cm.tab20.colors, 0, None, 2),\n",
+    "        islice(mpl.cm.tab20.colors, 1, None, 2),\n",
+    "        mpl.cm.Pastel1.colors,\n",
+    "    ))))\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
