api: Rename /similar -> /search

--- a/features/notebooks/180925_api_precompute.ipynb
+++ b/features/notebooks/180925_api_precompute.ipynb
@@ -37,7 +37,7 @@
     "def verbose(\n",
     "    both=None,       # Shorthand, e.g. verbose('warn') = verbose(cache='warn', audio='warn')\n",
     "    *,\n",
-    "    cache='debug',   # Show cache hit/miss lines # WARNING Frequent hangs during bigger xc_similar_html calls...\n",
+    "    cache='debug',   # Show cache hit/miss lines # WARNING Frequent hangs during bigger xc_search_html calls...\n",
     "    # cache='info',  # Show cache hit/miss chars # WARNING (same)\n",
     "    # cache='warn',  # Quiet\n",
     "    audio='debug',   # Show read/write\n",
@@ -94,7 +94,7 @@
     "        # tags_refresh=['sp14/model/species_proba'],  # XXX Dev\n",
     "    ))\n",
     "    display(\n",
-    "        xc_similar_html(\n",
+    "        xc_search_html(\n",
     "            sp_cols='species',\n",
     "\n",
     "            # Perf: search_recs\n",
@@ -140,9 +140,9 @@
    },
    "outputs": [],
    "source": [
-    "# Use /similar\n",
+    "# Use /search\n",
     "opt('warn', use='dask', scheduler='threads')  # Quiet + par + progress bars\n",
-    "xc_similar_html(\n",
+    "xc_search_html(\n",
     "    # view=False,\n",
     "    # n_total=20,\n",
     "    # n_sp_recs=1,\n",
