--- a/features/notebooks/180928_qa_api.ipynb
+++ b/features/notebooks/180928_qa_api.ipynb
@@ -271,7 +271,7 @@
    "outputs": [],
    "source": [
     "# opt('warn', use='dask', scheduler='threads')  # Quiet + par + progress bars\n",
-    "xc_similar_html(\n",
+    "xc_search_html(\n",
     "    # view=False,\n",
     "    # n_total=20,\n",
     "    # n_sp_recs=1,\n",
@@ -311,9 +311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
