api: Add /browse

--- a/features/notebooks/180928_qa_api.ipynb
+++ b/features/notebooks/180928_qa_api.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "3.933s"
+    "time": "4.469s"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:00.122] [25674] 150 logging_/<module>: {logging_yaml: None}"
+     "text": "INFO     [16:21:01.205] [27772] 150 logging_/<module>: {logging_yaml: None}"
     },
     {
      "name": "stdout",
@@ -20,7 +20,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:00.419] [25674]  32 api.server_globals/init"
+     "text": "INFO     [16:21:01.549] [27772]  32 api.server_globals/init"
     },
     {
      "name": "stdout",
@@ -30,7 +30,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:00.426] [25674]  75 api.server_globals/load: load_search..."
+     "text": "DEBUG    [16:21:01.557] [27772]  75 api.server_globals/load: load_search..."
     },
     {
      "name": "stdout",
@@ -40,7 +40,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:00.707] [25674]  79 api.server_globals/load: load_search (took 0.273s)"
+     "text": "INFO     [16:21:01.851] [27772]  79 api.server_globals/load: load_search (took 0.289s)"
     },
     {
      "name": "stdout",
@@ -50,7 +50,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:00.713] [25674]  75 api.server_globals/load: load_xc_meta..."
+     "text": "DEBUG    [16:21:01.858] [27772]  75 api.server_globals/load: load_xc_meta..."
     },
     {
      "name": "stdout",
@@ -60,7 +60,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:01.129] [25674]  79 api.server_globals/load: load_xc_meta (took 0.409s)"
+     "text": "INFO     [16:21:02.207] [27772]  79 api.server_globals/load: load_xc_meta (took 0.342s)"
     },
     {
      "name": "stdout",
@@ -70,7 +70,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:01.137] [25674]  75 api.server_globals/load: load_feat_info..."
+     "text": "DEBUG    [16:21:02.214] [27772]  75 api.server_globals/load: load_feat_info..."
     },
     {
      "name": "stdout",
@@ -80,7 +80,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:01.144] [25674] 110 api.server_globals/load_feat_info"
+     "text": "INFO     [16:21:02.222] [27772] 110 api.server_globals/load_feat_info"
     },
     {
      "name": "stdout",
@@ -90,7 +90,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:01.148] [25674]  79 api.server_globals/load: load_feat_info (took 0.005s)"
+     "text": "INFO     [16:21:02.228] [27772]  79 api.server_globals/load: load_feat_info (took 0.007s)"
     },
     {
      "name": "stdout",
@@ -100,7 +100,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:01.153] [25674]  75 api.server_globals/load: load_search_recs..."
+     "text": "DEBUG    [16:21:02.233] [27772]  75 api.server_globals/load: load_search_recs..."
     },
     {
      "name": "stdout",
@@ -110,7 +110,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:01.162] [25674] 118 api.server_globals/load_search_recs"
+     "text": "INFO     [16:21:02.239] [27772] 118 api.server_globals/load_search_recs"
     },
     {
      "name": "stdout",
@@ -120,7 +120,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:01.168] [25674] 399 api.recs/get_search_recs"
+     "text": "INFO     [16:21:02.243] [27772] 479 api.recs/get_search_recs"
     },
     {
      "name": "stdout",
@@ -130,7 +130,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:01.179] [25674] 118 payloads/df_cache_hybrid: Hit: payloads/search_recs-version[1],limit[1000],audio_s[10],scale[1],countries_k[na],com_names_k[ca],num_recs[None]-bd77e24"
+     "text": "INFO     [16:21:02.339] [27772] 118 payloads/df_cache_hybrid: Hit: payloads/search_recs-version[2],limit[1000],audio_s[10],countries_k[na],com_names_k[ca],num_recs[None]-01b98fe"
     },
     {
      "name": "stdout",
@@ -140,7 +140,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:01.184] [25674] 119 payloads/df_cache_hybrid: Hit [start]"
+     "text": "DEBUG    [16:21:02.343] [27772] 119 payloads/df_cache_hybrid: Hit [start]"
     },
     {
      "name": "stdout",
@@ -150,7 +150,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:01.191] [25674] 129 payloads/df_cache_hybrid: Hit: Reading non_feats.parquet (89.3 MB)"
+     "text": "DEBUG    [16:21:02.352] [27772] 129 payloads/df_cache_hybrid: Hit: Reading non_feats.parquet (53.4 MB)"
     },
     {
      "name": "stdout",
@@ -160,7 +160,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.692] [25674] 136 payloads/df_cache_hybrid: Hit: Read non_feats.parquet (89.3 MB)"
+     "text": "INFO     [16:21:03.896] [27772] 136 payloads/df_cache_hybrid: Hit: Read non_feats.parquet (53.4 MB)"
     },
     {
      "name": "stdout",
@@ -170,7 +170,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:02.701] [25674] 141 payloads/df_cache_hybrid: Hit: Reading feat-feat.npy (6.0 MB)"
+     "text": "DEBUG    [16:21:03.904] [27772] 141 payloads/df_cache_hybrid: Hit: Reading feat-f_preds.npy (1.3 MB)"
     },
     {
      "name": "stdout",
@@ -180,7 +180,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.711] [25674] 143 payloads/df_cache_hybrid: Hit: Read feat-feat.npy: float32 (6.0 MB)"
+     "text": "INFO     [16:21:03.914] [27772] 143 payloads/df_cache_hybrid: Hit: Read feat-f_preds.npy: float32 (1.3 MB)"
     },
     {
      "name": "stdout",
@@ -190,7 +190,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "DEBUG    [11:21:02.716] [25674] 141 payloads/df_cache_hybrid: Hit: Reading feat-f_preds.npy (1.3 MB)"
+     "text": "DEBUG    [16:21:03.923] [27772] 141 payloads/df_cache_hybrid: Hit: Reading feat-feat.npy (6.0 MB)"
     },
     {
      "name": "stdout",
@@ -200,7 +200,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.723] [25674] 143 payloads/df_cache_hybrid: Hit: Read feat-f_preds.npy: float32 (1.3 MB)"
+     "text": "INFO     [16:21:03.934] [27772] 143 payloads/df_cache_hybrid: Hit: Read feat-feat.npy: float32 (6.0 MB)"
     },
     {
      "name": "stdout",
@@ -210,7 +210,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.729] [25674] 147 payloads/df_cache_hybrid: Hit: Join non_feats + feats"
+     "text": "INFO     [16:21:03.940] [27772] 147 payloads/df_cache_hybrid: Hit: Join non_feats + feats"
     },
     {
      "name": "stdout",
@@ -220,7 +220,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.759] [25674] 155 payloads/df_cache_hybrid: Hit [1.574s]"
+     "text": "INFO     [16:21:03.966] [27772] 155 payloads/df_cache_hybrid: Hit [1.623s]"
     },
     {
      "name": "stdout",
@@ -230,7 +230,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.766] [25674]  79 api.server_globals/load: load_search_recs (took 1.604s)"
+     "text": "INFO     [16:21:03.973] [27772]  79 api.server_globals/load: load_search_recs (took 1.734s)"
     },
     {
      "name": "stdout",
@@ -240,7 +240,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "INFO     [11:21:02.772] [25674]  34 api.server_globals/init: done"
+     "text": "INFO     [16:21:03.981] [27772]  34 api.server_globals/init: done"
     },
     {
      "name": "stdout",
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xc_species_html(species='WTSP', n_recs=3)"
+    "species_html(species='WTSP', n_recs=3)"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "outputs": [],
    "source": [
     "# opt('warn', use='dask', scheduler='threads')  # Quiet + par + progress bars\n",
-    "xc_search_html(\n",
+    "search_html(\n",
     "    # view=False,\n",
     "    # n_total=20,\n",
     "    # n_sp_recs=1,\n",
@@ -311,9 +311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
