api: Add user record + upload! (very hacky, but works until we have a real app)

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1055,9 +1055,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
