--- a/features/notebooks/180928_qa_api.ipynb
+++ b/features/notebooks/180928_qa_api.ipynb
@@ -4,250 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "4.469s"
+    "time": "14.954s"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:01.205] [27772] 150 logging_/<module>: {logging_yaml: None}"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:01.549] [27772]  32 api.server_globals/init"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:01.557] [27772]  75 api.server_globals/load: load_search..."
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:01.851] [27772]  79 api.server_globals/load: load_search (took 0.289s)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:01.858] [27772]  75 api.server_globals/load: load_xc_meta..."
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:02.207] [27772]  79 api.server_globals/load: load_xc_meta (took 0.342s)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:02.214] [27772]  75 api.server_globals/load: load_feat_info..."
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:02.222] [27772] 110 api.server_globals/load_feat_info"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:02.228] [27772]  79 api.server_globals/load: load_feat_info (took 0.007s)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:02.233] [27772]  75 api.server_globals/load: load_search_recs..."
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:02.239] [27772] 118 api.server_globals/load_search_recs"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:02.243] [27772] 479 api.recs/get_search_recs"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:02.339] [27772] 118 payloads/df_cache_hybrid: Hit: payloads/search_recs-version[2],limit[1000],audio_s[10],countries_k[na],com_names_k[ca],num_recs[None]-01b98fe"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:02.343] [27772] 119 payloads/df_cache_hybrid: Hit [start]"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:02.352] [27772] 129 payloads/df_cache_hybrid: Hit: Reading non_feats.parquet (53.4 MB)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.896] [27772] 136 payloads/df_cache_hybrid: Hit: Read non_feats.parquet (53.4 MB)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:03.904] [27772] 141 payloads/df_cache_hybrid: Hit: Reading feat-f_preds.npy (1.3 MB)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.914] [27772] 143 payloads/df_cache_hybrid: Hit: Read feat-f_preds.npy: float32 (1.3 MB)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "DEBUG    [16:21:03.923] [27772] 141 payloads/df_cache_hybrid: Hit: Reading feat-feat.npy (6.0 MB)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.934] [27772] 143 payloads/df_cache_hybrid: Hit: Read feat-feat.npy: float32 (6.0 MB)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.940] [27772] 147 payloads/df_cache_hybrid: Hit: Join non_feats + feats"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.966] [27772] 155 payloads/df_cache_hybrid: Hit [1.623s]"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.973] [27772]  79 api.server_globals/load: load_search_recs (took 1.734s)"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [16:21:03.981] [27772]  34 api.server_globals/init: done"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from notebooks import *\n",
     "sg.init(None)  # Computes search_recs, if cache miss"
@@ -256,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "time": "1.181s"
+   },
    "outputs": [],
    "source": [
     "species_html(species='WTSP', n_recs=3)"
@@ -266,7 +27,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "1.157s"
+    "time": "3.038s"
    },
    "outputs": [],
    "source": [
@@ -290,14 +51,6 @@
     "\n",
     "    xc_id=408551,\n",
     "\n",
-    "    n_sp=3,\n",
-    "    # n_sp=10,\n",
-    "    # n_sp=20,\n",
-    "    # n_sp=40,\n",
-    "    # n_sp=80,\n",
-    "    # n_sp=160,\n",
-    "    # n_sp=None,\n",
-    "\n",
     ")"
    ]
   },
@@ -311,9 +64,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
