notebooks: Add TODOs

--- a/features/notebooks/180629_eval.ipynb
+++ b/features/notebooks/180629_eval.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO TODO WIP\n",
+    "- [ ] Sync updates from notebooks/comp_l1_l2 (last comp/eval I ran) to eval (should maintain as state-of-the-art eval)\n",
+    "- notebooks/eval\n",
+    "- notebooks/comp_l1_l2\n",
+    "- notebooks/comp_l1_l2_async"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2491,9 +2502,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
