--- a/features/notebooks/180721_ebird_priors.ipynb
+++ b/features/notebooks/180721_ebird_priors.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TODO TODO WIP\n",
+    "- notebooks/ebird_priors\n",
+    "- notebooks/ovr_subset_classes\n",
+    "- ~/.figs/ebird-priors-preds-by-date-and-loc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Goals\n",
     "- [x] Get ebird data from Alex\n",
     "    - [x] US only (18g Feb17)\n",
@@ -1344,9 +1354,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
