--- a/features/notebooks/180808_ovr_subset_classes.ipynb
+++ b/features/notebooks/180808_ovr_subset_classes.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO TODO WIP\n",
+    "- notebooks/ebird_priors\n",
+    "- notebooks/ovr_subset_classes\n",
+    "- ~/.figs/ebird-priors-preds-by-date-and-loc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
