mobile + search_recs: Add .taxon_order, .taxon_id

--- a/features/notebooks/180928_qa_api.ipynb
+++ b/features/notebooks/180928_qa_api.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "14.954s"
+    "time": "5.416s"
    },
    "outputs": [],
    "source": [
@@ -15,19 +15,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "time": "1.181s"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "species_html(species='WTSP', n_recs=3)"
+    "species_html(\n",
+    "    species='YRWA',\n",
+    "    n_recs=3,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "3.038s"
+    "time": "1.347s"
    },
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
     "    # xc_id=416558,  # COYE (good)\n",
     "    # xc_id=329879,  # WTSP (good)\n",
     "\n",
-    "    xc_id=408551,\n",
+    "    # xc_id=408551,\n",
     "\n",
     ")"
    ]
