mobile: rec search partly working (TODO n_sp_recs)

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1048,6 +1048,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "time": "3.889s"
+   },
+   "outputs": [],
+   "source": [
+    "# Debug mobile cosine_distance\n",
+    "from notebooks import *\n",
+    "sg.init(None)\n",
+    "recs = sg.search_recs\n",
+    "q = recs.query('xc_id == 417559').iloc[0]\n",
+    "s = recs.query('xc_id == 416810').iloc[0]\n",
+    "display(\n",
+    "    sk.metrics.pairwise.distance_metrics()['cosine']([s.f_preds], [q.f_preds]),\n",
+    "    np.dot(s.f_preds, q.f_preds) / np.linalg.norm(s.f_preds) / np.linalg.norm(q.f_preds),\n",
+    "    1 - np.dot(s.f_preds, q.f_preds) / np.linalg.norm(s.f_preds) / np.linalg.norm(q.f_preds),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find search.classes_ for mobile\n",
+    "from notebooks import *\n",
+    "sg.init(None)\n",
+    "display(\n",
+    "    sk_dir_attrs(sg.search),\n",
+    "    sg.search.classes_,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1055,9 +1091,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
