[wip] mobile/Spectro.swift: Test librosa,spectro (woo!)

--- a/Birdgram/ios/Tests/test_np.ipynb
+++ b/Birdgram/ios/Tests/test_np.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recreate np.fft.rfft on mobile using ios vDSP (for scipy.signal.spectrogram)"
+    "# Test ios np.fft.rfft vs. py"
    ]
   },
   {
