--- a/Birdgram/ios/Tests/test_scipy.ipynb
+++ b/Birdgram/ios/Tests/test_scipy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recreate scipy.signal.spectrogram on mobile using ios vDSP"
+    "# Test ios scipy.signal.spectrogram vs. py"
    ]
   },
   {
@@ -618,9 +618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
