[wip] mobile/Spectro.swift: Bug-fixing checkpoint

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -288,14 +288,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "M = lambda r, c: np.random.rand(r, c)\n",
+    "np.dot(M(1,2), M(2,0)).shape\n",
+    "np.dot(M(0,2), M(2,3)).shape\n",
+    "np.dot(M(1,0), M(0,3)).shape\n",
+    "np.dot(M(1,0), M(0,3))\n",
+    "np.linalg.inv(M(0,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
