[wip] mobile/Spectro.swift: Features.spectro is fast

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -290,11 +290,21 @@
    "outputs": [],
    "source": [
     "M = lambda r, c: np.random.rand(r, c)\n",
-    "np.dot(M(1,2), M(2,0)).shape\n",
-    "np.dot(M(0,2), M(2,3)).shape\n",
-    "np.dot(M(1,0), M(0,3)).shape\n",
-    "np.dot(M(1,0), M(0,3))\n",
-    "np.linalg.inv(M(0,0))"
+    "np.dot(M(1,2), M(2,0))\n",
+    "np.dot(M(0,2), M(2,3))\n",
+    "np.dot(M(1,0), M(0,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.abs(np.fft.rfft(np.array([1])))\n",
+    "np.abs(np.fft.rfft(np.array([1,1])))\n",
+    "np.abs(np.fft.rfft(np.array([1,1,1])))\n",
+    "np.abs(np.fft.rfft(np.array([1,1,1,1])))"
    ]
   },
   {
@@ -307,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "Python 2 (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "Python 2 (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
