mobile/ios/Spectro: Fix streaming lo/hi

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -312,6 +312,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "np.max([])\n",
+    "pd.qcut([], q=2)\n",
+    "pd.qcut?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
