--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -310,12 +310,102 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "time": "4.613s"
+   },
+   "outputs": [],
+   "source": [
+    "x = np.random.rand(5_000_000) * 100\n",
+    "X = np.random.rand(3,5)\n",
+    "np.save('/tmp/array.npy',  x)\n",
+    "np.save('/tmp/matrix.npy', X)\n",
+    "np.savez('/tmp/z.npz', x=x, X=X)\n",
+    "np.savez_compressed('/tmp/z_compressed.npz', x=x, X=X)\n",
+    "display(\n",
+    "    np.load('/tmp/array.npy'),\n",
+    "    np.load('/tmp/matrix.npy'),\n",
+    "    dict(np.load('/tmp/z.npz')),\n",
+    "    dict(np.load('/tmp/z_compressed.npz')),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.max([])\n",
-    "pd.qcut([], q=2)\n",
-    "pd.qcut?"
+    "X = np.random.rand(3,5); X\n",
+    "X.mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.load(\n",
+    "    '/Users/danb/hack/bubo/data/'\n",
+    "    'cache/payloads/search_recs-version[8],limit[100],audio_s[10],countries_k[na],com_names_k[ca],num_recs[None]-fb42447/mobile-version[1]/search_recs/models/'\n",
+    "    'classifier_.estimators_[97].coef_.npy'\n",
+    ").shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = dict(\n",
+    "    a=1,\n",
+    "    b='foo',\n",
+    "    c=[1,2,3],\n",
+    ")\n",
+    "np.save('/tmp/obj.npy', obj)\n",
+    "np.load('/tmp/obj.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "sg.init(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For sk.linear_model.LogisticRegressionOneClass\n",
+    "X = np.random.rand(5,1500)\n",
+    "display(\n",
+    "    sg.search.classifier_.predict_proba(X).shape,\n",
+    "    sg.search.classifier_.estimators_[0].predict_proba(X).shape,\n",
+    "    sg.search.classifier_.estimators_[0].predict_proba(X),\n",
+    "    scipy.special.expit(sg.search.classifier_.estimators_[0].decision_function(X)),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sg.search.classifier_.estimators_[0].coef_.shape\n",
+    "sg.search.classifier_.estimators_[0].intercept_.shape\n",
+    "sk_dir_attrs(sg.search.classifier_)\n",
+    "sg.search.classifier_.estimators_[0]\n",
+    "sg.search.classifier_.intercept_.shape\n",
+    "sg.search.classifier_.estimators_[0].intercept_.shape\n",
+    "sk_dirs_attrs(sg.search.classifier_)"
    ]
   },
   {
@@ -328,9 +418,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2 (PYTHONSTARTUP)",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "Python 2 (PYTHONSTARTUP)"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
