mobile/Search: model predict is ported and tested! Some inaccuracies, but maybe low impact...?

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -370,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "time": "4.356s"
+   },
    "outputs": [],
    "source": [
     "from notebooks import *\n",
