model/US+CR: Evals done; wip: training final models, building mobile payloads

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -434,6 +434,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "metadata.species.df[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
