model/US+CR: Re-train CR model (oops 1/2 data); fight with mobile payloads, eventually win

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -432,11 +432,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "time": "20.931s"
+   },
+   "outputs": [],
+   "source": [
+    "# Q: What kinds of huge recs are out there?\n",
+    "#   - A: Holy crap 1.4gb!\n",
+    "# Like _compute_search_recs\n",
+    "recs = sg.xc_meta\n",
+    "# Like recs_featurize_metdata_audio_slice\n",
+    "recs = (recs\n",
+    "    .pipe(recs_featurize_metadata)\n",
+    ")\n",
+    "display(\n",
+    "    recs.shape,\n",
+    "    recs.samples_mb[lambda s: s > 100].shape,\n",
+    ")\n",
+    "recs.samples_mb[lambda s: s >= 0].plot.hist(bins=100, logy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "2.212s"
+   },
    "outputs": [],
    "source": [
     "from notebooks import *\n",
-    "metadata.species.df[:3]"
+    "load = Load()\n",
+    "load.recs_paths(['xc'])[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "2.69s"
+   },
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "load = Load()\n",
+    "with cache_control(enabled=False):\n",
+    "    display(\n",
+    "        load.recs(paths=[('xc', '/Users/danb/hack/bubo/features/data/xc/data/ABAN/12046/audio.mp3')]),\n",
+    "    )"
    ]
   },
   {
@@ -449,9 +491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "Python 3 (PYTHONSTARTUP)",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "Python 3 (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
