mobile: Power through US + CR payloads (hacked around slow python fork() with manual proc par)

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -484,6 +484,117 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "time": "1.951s"
+   },
+   "outputs": [],
+   "source": [
+    "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sg_load.load_search_recs.__name__\n",
+    "'foo'.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skip = ['foo', sg_load.load_search_recs]\n",
+    "skip = [getattr(f, '__name__', f) for f in skip]\n",
+    "skip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4.0K    server-config.json\n",
+    "\n",
+    "4.7M    metadata/species.json\n",
+    "11M     models/\n",
+    "\n",
+    "30M     search_recs.sqlite3\n",
+    "144M    audio/\n",
+    "46M     spectro/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Birdgram CA: 2.0G search_recs/ on laptop -> 2.3GB in \"iPhone Storage\"\n",
+    "((30 + 144 + 46) * 1024**2 / 1024**3)\n",
+    "((30 + 144 + 46) * 1024**2 / 3500 * 69351 / 1024**3)        # 4.26gb <- TOO BIG\n",
+    "((30 + 144 + 46) * 1024**2 / 3500 * 69351 * 1/2 / 1024**3)  # 2.13gb\n",
+    "((30 + 144 + 46) * 1024**2 / 3500 * 69351 * 2/3 / 1024**3)  # 2.84gb <- Do this\n",
+    "((30 + 144 + 46) * 1024**2 / 3500 * 69351 * 3/4 / 1024**3)  # 3.19gb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "4.085s"
+   },
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "sg.init(None, skip=['load_search_recs'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "6.695s"
+   },
+   "outputs": [],
+   "source": [
+    "meta = sg_load.load_xc_meta(_nocache=True)['xc_meta']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(meta\n",
+    "    .assign(n=1).groupby('species')['n'].sum().reset_index()\n",
+    "    # [:10]\n",
+    "    .assign(n=lambda df: np.minimum(200, df.n))\n",
+    "    # .n.pipe(lambda s: np.asscalar(s.sum() / len(meta)))\n",
+    "    .n.pipe(lambda s: np.asscalar(s.sum()))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset = (0,3)\n",
+    "n = 500\n",
+    "range(n)[subset[0]::subset[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -491,9 +602,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "Python 3 (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
